Fixes on data/domain layer, impl of UI for list item

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">InPost Recruitment Task</string>
+
+    <string name="more">więcej</string>
+    <string name="ship_number_header">NR PRZESYŁKI</string>
+    <string name="ship_status_header">STATUS</string>
+    <string name="ship_user_header">NADAWCA</string>
 </resources>
